Changes in 4.0.1

1)  Add EXPAND_POLICIES.

2)  Fix uninstallers.

3)  Correct handling of 'ipsec' option in the hosts file.

4)  Corrent handling of 'PATH' in Shorewall-perl.

5)  Correct handling of ECN with MANGLE_FORWARD.

Changes in 4.0.0 Final

1)  Fix lite install.sh manpage problem.

2)  Fix shorewall-shell .spec to modify SHOREWALL_COMPILER.

3)  Shuffle code in Providers.pm.

4)  Consolicate Common.pm + Config.pm and Interfaces.pm + Hosts.pm +
    Zones.pm.

5)  Validate log level in policy file.

Changes in 4.0.0 RC 2

1)  Fix zone type check in Tunnels File.

2)  Remove -f as default start OPTIONS.

3)  Remove 3.4 compatibility hacks.

4)  Fix install.sh manpage problem.

5)  Fix LITEDIR mess.

6)  Fix IPSEC.

7)  Add Tunneling Macros from Tuomo Soini.

Changes in 4.0.0 RC 1

1)  shorewall-perl RPM no longer installable under shorewall 3.4.

2)  Fix limited broadcast and detectnets/routeback interfaces.

3)  Use optimized 'split' for faster compilation.

4)  Validate host part in hosts file entry.

5)  Fix IPSECFILE=ipsec.

6)  Make ':noah' the default.

7)  Work around SELinux nonsense.

8)  Restore the 'refresh' command.

9)  Allow ipsec zone in GATEWAY ZONE column of the tunnels file.

10) Raise error on chmod failure.

11) Handle shell variables with zero value correctly.

Changes in 4.0.0 Beta 6

1)  First step to adding compiler debugging facility.

2)  Assume that iptables-restore is in the same directory as $IPTABLES

3)  Fix buildports.pm to handle bogus entries in /etc/protocols and
    /etc/services.

4)  Allow COMMENT in the accounting file.

Changes in 4.0.0 Beta 6

1)  Validate the DISPOSITION in /etc/shorewall/maclist entries.

2)  Add versioning to capabilities files.

3)  Improve compiler selection.

4)  DYNAMIC_ZONES=Yes and bridges.

5)  Implement port validation.

Changes in 4.0.0 Beta 5

1)  Fix undefined function call when both an input interface and an
    output interface are present.

2)  Externalize compiler and Compile.pm.
