@@ -706,7 +706,6 @@ sub compiler( $$$$ ) {
     report_capabilities if $verbose > 1;
 
     require_capability( 'MULTIPORT'       , "Shorewall-perl $globals{VERSION}" , 's' );
-    require_capability( 'ADDRTYPE'        , "Shorewall-perl $globals{VERSION}" , 's' );
     require_capability( 'RECENT_MATCH'    , 'MACLIST_TTL' , 's' )           if $config{MACLIST_TTL};
     require_capability( 'XCONNMARK'       , 'HIGH_ROUTE_MARKS=Yes' , 's' )  if $config{HIGH_ROUTE_MARKS};
     require_capability( 'MANGLE_ENABLED'  , 'Traffic Shaping' , 's'      )  if $config{TC_ENABLED};
