@@ -92,6 +92,10 @@ Other changes in Shorewall 4.0.1.
     zone and 'b' is the DEST zone. See
     http://linuxman.wikispaces.com/PPPPPPS for more information.
 
+2)  The Shorewall-perl dependency on the "Address Type Match"
+    capability has been relaxed. This allows Shorewall 4.0.1 to be used
+    on releases like RHEL4 that con's support that capability.
+
 Migration Considerations:
 
 1)  Beginning with Shorewall 4.0.0, there is no single 'shorewall'
