@@ -10,6 +10,8 @@ Changes in 4.0.1
 
 5)  Correct handling of ECN with MANGLE_FORWARD.
 
+6)  Relax ADDRTYPE restriction.
+
 Changes in 4.0.0 Final
 
 1)  Fix lite install.sh manpage problem.
